--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,8 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -37,7 +39,6 @@ android {
 
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
@@ -50,6 +51,9 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation 'com.google.code.gson:gson:2.8.9'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.github.yalantis:ucrop:2.2.6'
+
+    implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
     // CameraX core library using the camera2 implementation
     def camerax_version = "1.3.0-alpha04"
     // The following line is optional, as the core library is included indirectly by camera-camera2
